Move 2021 data to dedicated directory

--- a/top_universities.ipynb
+++ b/top_universities.ipynb
@@ -74,9 +74,9 @@
     "        return [Uni(name, int(rank)) for name, rank in islice(reader, limit)]\n",
     "\n",
     "# Load top-50 unis\n",
-    "ranking_qs = load_ranking(\"data/ranking-qs-cs-2021.tsv\", \"\\t\", 50)\n",
-    "ranking_the = load_ranking(\"data/ranking-the-cs-2021.tsv\", \"\\t\", 50)\n",
-    "ranking_arwu = load_ranking(\"data/ranking-arwu-cs-2020.tsv\", \"\\t\", 50)"
+    "ranking_qs = load_ranking(\"data/cs-2021/ranking-qs-cs-2021.tsv\", \"\\t\", 50)\n",
+    "ranking_the = load_ranking(\"data/cs-2021/ranking-the-cs-2021.tsv\", \"\\t\", 50)\n",
+    "ranking_arwu = load_ranking(\"data/cs-2021/ranking-arwu-cs-2020.tsv\", \"\\t\", 50)"
    ]
   },
   {
@@ -223,7 +223,7 @@
     "\n",
     "unis_all = unis_qs | unis_the | unis_arwu\n",
     "\n",
-    "with open(\"data/universities_sorted.tsv\", \"w\") as file:\n",
+    "with open(\"data/cs-2021/universities_sorted.tsv\", \"w\") as file:\n",
     "    for uni in sorted(unis_all):\n",
     "        file.write(f\"{uni}\\n\")\n",
     "    file.write(f\"Length: {len(unis_all)}\")"
@@ -363,7 +363,7 @@
     "def save_ranking(ranking: list[Uni], limit: int = None) -> None:\n",
     "    \"\"\"Save ranking to file and preview it.\"\"\"\n",
     "    ranking_sorted = [uni for uni in sorted(ranking_all, key=lambda uni: uni.rank)]\n",
-    "    with open(\"data/ranking_global_cs_2021.tsv\", \"w\") as file:\n",
+    "    with open(\"data/cs-2021/ranking_global_cs_2021.tsv\", \"w\") as file:\n",
     "        for i, uni in enumerate(ranking_sorted, start=1):\n",
     "            row = f\"{i}\\t{uni.name}\\t{uni.rank:.2f}\"\n",
     "            file.write(f\"{row}\\n\")\n",
