Improve loading of ranking data

--- a/top_universities.ipynb
+++ b/top_universities.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 62,
    "id": "65141b66",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 63,
    "id": "fa98a0ea",
    "metadata": {},
    "outputs": [],
@@ -62,21 +62,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 64,
    "id": "9c1aafd4",
    "metadata": {},
    "outputs": [],
    "source": [
+    "def format(rank: str) -> int:\n",
+    "    \"\"\"Format rank as an integer.\"\"\"\n",
+    "    if rank.startswith(\"=\"):\n",
+    "        return int(rank[1:])\n",
+    "    if rank.endswith(\"+\"):\n",
+    "        return int(rank[:-1])\n",
+    "    if \"–\" in rank:\n",
+    "        return mean([int(val) for val in rank.split(\"–\")])\n",
+    "    if \"-\" in rank:\n",
+    "        return mean([int(val) for val in rank.split(\"-\")])\n",
+    "    return int(rank)\n",
+    "\n",
     "def load_ranking(path: str, delimiter: str = None, limit: int = None) -> list[Uni]:\n",
     "    \"\"\"Load ranking.\"\"\"\n",
     "    with open(path) as file:\n",
     "        reader = csv.reader(file, delimiter=delimiter)\n",
-    "        return [Uni(name, int(rank)) for name, rank in islice(reader, limit)]\n",
+    "        next(reader)  # Skip header row\n",
+    "        return [Uni(name, format(rank)) for name, rank in islice(reader, limit)]\n",
     "\n",
-    "# Load top-50 unis\n",
-    "ranking_qs = load_ranking(\"data/cs-2021/ranking-qs-cs-2021.tsv\", \"\\t\", 50)\n",
-    "ranking_the = load_ranking(\"data/cs-2021/ranking-the-cs-2021.tsv\", \"\\t\", 50)\n",
-    "ranking_arwu = load_ranking(\"data/cs-2021/ranking-arwu-cs-2020.tsv\", \"\\t\", 50)"
+    "# Load universities\n",
+    "ranking_the = load_ranking(\"ranking_scraper/the_cs_2022.csv\", \",\")\n",
+    "ranking_qs = load_ranking(\"ranking_scraper/qs_cs_2021.csv\", \",\")\n",
+    "ranking_arwu = load_ranking(\"ranking_scraper/arwu_cs_2021.csv\", \",\")"
    ]
   },
   {
@@ -89,14 +102,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 65,
    "id": "5a841061",
    "metadata": {},
    "outputs": [],
    "source": [
     "def preview_ranking(ranking: list[Uni], limit: int = 10) -> None:\n",
     "    \"\"\"Preview ranking.\"\"\"\n",
+    "    # Print first universities in ranking\n",
     "    for i in range(limit):\n",
+    "        uni = ranking[i]\n",
+    "        print(f\"{uni.name}\\t{uni.rank}\")\n",
+    "    print(\"...\")\n",
+    "    # Print last universities in ranking\n",
+    "    for i in range(len(ranking) - limit, len(ranking)):\n",
     "        uni = ranking[i]\n",
     "        print(f\"{uni.name}\\t{uni.rank}\")\n",
     "    print(\n",
@@ -107,8 +126,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 66,
    "id": "c12c8d35",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "University of Oxford\t1\n",
+      "Stanford University\t2\n",
+      "Massachusetts Institute of Technology\t3\n",
+      "University of Cambridge\t4\n",
+      "ETH Zurich\t4\n",
+      "Carnegie Mellon University\t6\n",
+      "Harvard University\t7\n",
+      "University of California, Berkeley\t8\n",
+      "National University of Singapore\t8\n",
+      "Princeton University\t10\n",
+      "...\n",
+      "Tokyo University of Agriculture and Technology\t801\n",
+      "Tokyo Denki University\t801\n",
+      "Tokyo University of Science\t801\n",
+      "Toyohashi University of Technology (TUT)\t801\n",
+      "Tshwane University of Technology\t801\n",
+      "Vilnius University\t801\n",
+      "Wuhan University of Technology\t801\n",
+      "Yamaguchi University\t801\n",
+      "Yanshan University\t801\n",
+      "Yuan Ze University\t801\n",
+      "-----------------------------\n",
+      "Length: 892\n"
+     ]
+    }
+   ],
+   "source": [
+    "preview_ranking(ranking_the)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "1ed902e3",
    "metadata": {},
    "outputs": [
     {
@@ -123,10 +182,21 @@
       "University of Oxford\t6\n",
       "Harvard University\t7\n",
       "University of Cambridge\t8\n",
-      "Ecole Polytechnique Federale de Lausanne (EPFL)\t9\n",
+      "EPFL\t9\n",
       "ETH Zurich - Swiss Federal Institute of Technology\t10\n",
+      "...\n",
+      "University of Jyväskylä\t625.5\n",
+      "Université de Liège\t625.5\n",
+      "University of Maryland, Baltimore County\t625.5\n",
+      "University of Massachusetts Boston\t625.5\n",
+      "University of Minho\t625.5\n",
+      "University of New Mexico\t625.5\n",
+      "University of Reading\t625.5\n",
+      "University of Saskatchewan\t625.5\n",
+      "University of Zagreb\t625.5\n",
+      "Vietnam National University, Hanoi\t625.5\n",
       "-----------------------------\n",
-      "Length: 50\n"
+      "Length: 651\n"
      ]
     }
    ],
@@ -136,36 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "1ed902e3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "University of Oxford\t1\n",
-      "Stanford University\t2\n",
-      "Massachusetts Institute of Technology (MIT)\t3\n",
-      "ETH Zurich - Swiss Federal Institute of Technology\t4\n",
-      "Carnegie Mellon University\t5\n",
-      "University of Cambridge\t6\n",
-      "Harvard University\t7\n",
-      "National University of Singapore (NUS)\t8\n",
-      "University of California, Berkeley (UCB)\t9\n",
-      "Imperial College London\t10\n",
-      "-----------------------------\n",
-      "Length: 50\n"
-     ]
-    }
-   ],
-   "source": [
-    "preview_ranking(ranking_the)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 68,
    "id": "e96a5910",
    "metadata": {},
    "outputs": [
@@ -175,16 +216,27 @@
      "text": [
       "Massachusetts Institute of Technology (MIT)\t1\n",
       "Stanford University\t2\n",
-      "University of California, Berkeley (UCB)\t3\n",
+      "University of California, Berkeley\t3\n",
       "Carnegie Mellon University\t4\n",
-      "ETH Zurich - Swiss Federal Institute of Technology\t5\n",
-      "Harvard University\t6\n",
-      "Tsinghua University\t7\n",
-      "Nanyang Technological University, Singapore (NTU)\t8\n",
-      "University of Toronto\t9\n",
-      "University of Oxford\t10\n",
+      "ETH Zurich\t5\n",
+      "Tsinghua University\t6\n",
+      "Harvard University\t7\n",
+      "Nanyang Technological University\t8\n",
+      "University of Oxford\t9\n",
+      "University of California, Los Angeles\t10\n",
+      "...\n",
+      "University of Tennessee - Knoxville\t450.5\n",
+      "University of the Basque Country\t450.5\n",
+      "University of Tuebingen\t450.5\n",
+      "University of Windsor\t450.5\n",
+      "University of Wuerzburg\t450.5\n",
+      "Vrije Universiteit Brussel (VUB)\t450.5\n",
+      "Wayne State University\t450.5\n",
+      "Zhejiang Gongshang University\t450.5\n",
+      "Zhejiang Normal University\t450.5\n",
+      "Zhengzhou University\t450.5\n",
       "-----------------------------\n",
-      "Length: 50\n"
+      "Length: 497\n"
      ]
     }
    ],
@@ -212,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "61f256b7",
    "metadata": {},
    "outputs": [],
@@ -239,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "151dd7e9",
    "metadata": {},
    "outputs": [],
@@ -256,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "94156d63",
    "metadata": {},
    "outputs": [],
@@ -269,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "0de48819",
    "metadata": {},
    "outputs": [],
@@ -288,77 +340,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "5e55de6e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\tMassachusetts Institute of Technology (MIT)\t1.67\n",
-      "2\tStanford University\t2.00\n",
-      "3\tCarnegie Mellon University\t4.00\n",
-      "4\tUniversity of California, Berkeley (UCB)\t5.67\n",
-      "5\tUniversity of Oxford\t5.67\n",
-      "6\tETH Zurich - Swiss Federal Institute of Technology\t6.33\n",
-      "7\tHarvard University\t6.67\n",
-      "8\tNational University of Singapore (NUS)\t10.00\n",
-      "9\tTsinghua University\t10.67\n",
-      "10\tPrinceton University\t12.33\n",
-      "11\tNanyang Technological University, Singapore (NTU)\t12.67\n",
-      "12\tUniversity of Toronto\t14.33\n",
-      "13\tUniversity of California, Los Angeles (UCLA)\t14.67\n",
-      "14\tCornell University\t15.67\n",
-      "15\tUniversity of Cambridge\t17.33\n",
-      "16\tImperial College London\t20.00\n",
-      "17\tUniversity College London (UCL)\t21.33\n",
-      "18\tEcole Polytechnique Federale de Lausanne (EPFL)\t23.00\n",
-      "19\tUniversity of Washington\t23.00\n",
-      "20\tPeking University\t24.00\n",
-      "21\tUniversity of Texas at Austin\t24.67\n",
-      "22\tColumbia University\t26.00\n",
-      "23\tUniversity of Edinburgh\t26.33\n",
-      "24\tGeorgia Institute of Technology\t26.67\n",
-      "25\tShanghai Jiao Tong University\t27.67\n",
-      "26\tNew York University (NYU)\t28.00\n",
-      "27\tUniversity of Illinois at Urbana-Champaign\t31.67\n",
-      "28\tChinese University of Hong Kong (CUHK)\t32.00\n",
-      "29\tCalifornia Institute of Technology (Caltech)\t32.67\n",
-      "30\tUniversity of Michigan-Ann Arbor\t32.67\n",
-      "31\tTechnical University of Munich\t33.33\n",
-      "32\tUniversity of Southern California\t34.67\n",
-      "33\tZhejiang University\t35.67\n",
-      "34\tHong Kong University of Science and Technology\t37.33\n",
-      "35\tYale University\t38.33\n",
-      "36\tUniversity of Technology Sydney\t38.33\n",
-      "37\tUniversity of Pennsylvania\t38.67\n",
-      "38\tUniversity of Waterloo\t39.67\n",
-      "39\tUniversity of Tokyo\t39.67\n",
-      "40\tUniversity of North Carolina at Chapel Hill\t39.67\n",
-      "41\tHarbin Institute of Technology\t41.00\n",
-      "42\tUniversity of British Columbia\t41.33\n",
-      "43\tKorea Advanced Institute of Science and Technology (KAIST)\t41.67\n",
-      "44\tUniversity of Science and Technology of China\t42.33\n",
-      "45\tJohns Hopkins University\t43.00\n",
-      "46\tUniversity of Montreal\t43.00\n",
-      "47\tUniversity of Chicago\t43.33\n",
-      "48\tHuazhong University of Science and Technology\t43.33\n",
-      "49\tParis Sciences et Lettres (PSL)\t43.67\n",
-      "50\tUniversity of Electronic Science and Technology of China\t44.00\n",
-      "51\tUniversity of Hong Kong\t44.33\n",
-      "52\tUniversity of Wisconsin–Madison\t44.67\n",
-      "53\tCity University of Hong Kong\t44.67\n",
-      "54\tXidian University\t45.67\n",
-      "55\tSeoul National University\t46.33\n",
-      "56\tUniversity of California, San Diego\t46.33\n",
-      "57\tBeihang University\t46.33\n",
-      "58\tUniversity of Melbourne\t47.00\n",
-      "59\tUniversity of Amsterdam\t47.33\n",
-      "60\tUniversity of Adelaide\t47.33\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def save_ranking(ranking: list[Uni], limit: int = None) -> None:\n",
     "    \"\"\"Save ranking to file and preview it.\"\"\"\n",
@@ -391,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
