Normalize university names to remove duplicates

--- a/top_universities.ipynb
+++ b/top_universities.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "id": "65141b66",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,9 @@
     "from collections import defaultdict\n",
     "from dataclasses import dataclass\n",
     "from itertools import islice\n",
-    "from statistics import mean"
+    "from statistics import mean\n",
+    "\n",
+    "from normalize import alt2main"
    ]
   },
   {
@@ -40,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "id": "fa98a0ea",
    "metadata": {},
    "outputs": [],
@@ -62,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "id": "9c1aafd4",
    "metadata": {},
    "outputs": [],
@@ -79,17 +81,25 @@
     "        return mean([int(val) for val in rank.split(\"-\")])\n",
     "    return int(rank)\n",
     "\n",
+    "def normalize(name: str) -> str:\n",
+    "    \"\"\"Normalize university names.\"\"\"\n",
+    "    if name.startswith(\"The \"):\n",
+    "        name = name[4:]\n",
+    "    if name in alt2main:\n",
+    "        return alt2main[name]\n",
+    "    return name\n",
+    "\n",
     "def load_ranking(path: str, delimiter: str = None, limit: int = None) -> list[Uni]:\n",
     "    \"\"\"Load ranking.\"\"\"\n",
     "    with open(path) as file:\n",
     "        reader = csv.reader(file, delimiter=delimiter)\n",
     "        next(reader)  # Skip header row\n",
-    "        return [Uni(name, format(rank)) for name, rank in islice(reader, limit)]\n",
+    "        return [Uni(normalize(name), format(rank)) for name, rank in islice(reader, limit)]\n",
     "\n",
     "# Load universities\n",
-    "ranking_the = load_ranking(\"ranking_scraper/the_cs_2022.csv\", \",\")\n",
-    "ranking_qs = load_ranking(\"ranking_scraper/qs_cs_2021.csv\", \",\")\n",
-    "ranking_arwu = load_ranking(\"ranking_scraper/arwu_cs_2021.csv\", \",\")"
+    "ranking_the = load_ranking(\"ranking_scraper/the_cs_2022.csv\", \",\", 100)\n",
+    "ranking_qs = load_ranking(\"ranking_scraper/qs_cs_2021.csv\", \",\", 100)\n",
+    "ranking_arwu = load_ranking(\"ranking_scraper/arwu_cs_2021.csv\", \",\", 100)"
    ]
   },
   {
@@ -102,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "id": "5a841061",
    "metadata": {},
    "outputs": [],
@@ -126,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "id": "c12c8d35",
    "metadata": {},
    "outputs": [
@@ -136,27 +146,27 @@
      "text": [
       "University of Oxford\t1\n",
       "Stanford University\t2\n",
-      "Massachusetts Institute of Technology\t3\n",
+      "Massachusetts Institute of Technology (MIT)\t3\n",
       "University of Cambridge\t4\n",
       "ETH Zurich\t4\n",
       "Carnegie Mellon University\t6\n",
       "Harvard University\t7\n",
       "University of California, Berkeley\t8\n",
-      "National University of Singapore\t8\n",
+      "National University of Singapore (NUS)\t8\n",
       "Princeton University\t10\n",
       "...\n",
-      "Tokyo University of Agriculture and Technology\t801\n",
-      "Tokyo Denki University\t801\n",
-      "Tokyo University of Science\t801\n",
-      "Toyohashi University of Technology (TUT)\t801\n",
-      "Tshwane University of Technology\t801\n",
-      "Vilnius University\t801\n",
-      "Wuhan University of Technology\t801\n",
-      "Yamaguchi University\t801\n",
-      "Yanshan University\t801\n",
-      "Yuan Ze University\t801\n",
+      "Tokyo Institute of Technology (Tokyo Tech)\t88\n",
+      "University of Southampton\t91\n",
+      "University of Birmingham\t92\n",
+      "University of Luxembourg\t93\n",
+      "Monash University\t93\n",
+      "University of Zurich\t93\n",
+      "Vrije Universiteit Amsterdam\t96\n",
+      "Technion Israel Institute of Technology\t97\n",
+      "TU Wien\t97\n",
+      "Queen Mary University of London\t99\n",
       "-----------------------------\n",
-      "Length: 892\n"
+      "Length: 100\n"
      ]
     }
    ],
@@ -166,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 6,
    "id": "1ed902e3",
    "metadata": {},
    "outputs": [
@@ -178,25 +188,25 @@
       "Stanford University\t2\n",
       "Carnegie Mellon University\t3\n",
       "National University of Singapore (NUS)\t4\n",
-      "University of California, Berkeley (UCB)\t5\n",
+      "University of California, Berkeley\t5\n",
       "University of Oxford\t6\n",
       "Harvard University\t7\n",
       "University of Cambridge\t8\n",
-      "EPFL\t9\n",
-      "ETH Zurich - Swiss Federal Institute of Technology\t10\n",
+      "Swiss Federal Institute of Technology Lausanne (EPFL)\t9\n",
+      "ETH Zurich\t10\n",
       "...\n",
-      "University of Jyväskylä\t625.5\n",
-      "Université de Liège\t625.5\n",
-      "University of Maryland, Baltimore County\t625.5\n",
-      "University of Massachusetts Boston\t625.5\n",
-      "University of Minho\t625.5\n",
-      "University of New Mexico\t625.5\n",
-      "University of Reading\t625.5\n",
-      "University of Saskatchewan\t625.5\n",
-      "University of Zagreb\t625.5\n",
-      "Vietnam National University, Hanoi\t625.5\n",
+      "University of Wisconsin–Madison\t89\n",
+      "Boston University\t92\n",
+      "Karlsruhe Institute of Technology (KIT)\t92\n",
+      "Universidad Nacional Autónoma de México (UNAM)\t94\n",
+      "University of Massachusetts (UMass)\t95\n",
+      "Aalto University\t96\n",
+      "University of Warwick\t96\n",
+      "Université catholique de Louvain (UCL)\t96\n",
+      "Aarhus University\t99\n",
+      "University of Adelaide\t99\n",
       "-----------------------------\n",
-      "Length: 651\n"
+      "Length: 100\n"
      ]
     }
    ],
@@ -206,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 7,
    "id": "e96a5910",
    "metadata": {},
    "outputs": [
@@ -221,22 +231,22 @@
       "ETH Zurich\t5\n",
       "Tsinghua University\t6\n",
       "Harvard University\t7\n",
-      "Nanyang Technological University\t8\n",
+      "Nanyang Technological University (NTU)\t8\n",
       "University of Oxford\t9\n",
-      "University of California, Los Angeles\t10\n",
+      "University of California, Los Angeles (UCLA)\t10\n",
       "...\n",
-      "University of Tennessee - Knoxville\t450.5\n",
-      "University of the Basque Country\t450.5\n",
-      "University of Tuebingen\t450.5\n",
-      "University of Windsor\t450.5\n",
-      "University of Wuerzburg\t450.5\n",
-      "Vrije Universiteit Brussel (VUB)\t450.5\n",
-      "Wayne State University\t450.5\n",
-      "Zhejiang Gongshang University\t450.5\n",
-      "Zhejiang Normal University\t450.5\n",
-      "Zhengzhou University\t450.5\n",
+      "Sichuan University\t88\n",
+      "Swinburne University of Technology\t88\n",
+      "Technical University of Denmark\t88\n",
+      "University of Hong Kong\t88\n",
+      "University of Melbourne\t88\n",
+      "Tongji University\t88\n",
+      "Université Grenoble Alpes\t88\n",
+      "University of California, Merced\t88\n",
+      "University of Macau\t88\n",
+      "University of Pennsylvania\t88\n",
       "-----------------------------\n",
-      "Length: 497\n"
+      "Length: 100\n"
      ]
     }
    ],
@@ -264,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "61f256b7",
    "metadata": {},
    "outputs": [],
@@ -275,7 +285,7 @@
     "\n",
     "unis_all = unis_qs | unis_the | unis_arwu\n",
     "\n",
-    "with open(\"data/cs-2021/universities_sorted.tsv\", \"w\") as file:\n",
+    "with open(\"data/cs-2022/universities_sorted.tsv\", \"w\") as file:\n",
     "    for uni in sorted(unis_all):\n",
     "        file.write(f\"{uni}\\n\")\n",
     "    file.write(f\"Length: {len(unis_all)}\")"
@@ -316,7 +326,7 @@
     "# Fill missing ranks\n",
     "for _, ranks in uni_ranks.items():\n",
     "    while len(ranks) < 3:\n",
-    "            ranks.append(51) # Best possible rank when not in top-50"
+    "            ranks.append(101) # Best possible rank when not in top-100"
    ]
   },
   {
