Generate combined computer science ranking 2022

--- a/top_universities.ipynb
+++ b/top_universities.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 57,
    "id": "65141b66",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 58,
    "id": "fa98a0ea",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 59,
    "id": "9c1aafd4",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 60,
    "id": "5a841061",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 61,
    "id": "c12c8d35",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 62,
    "id": "1ed902e3",
    "metadata": {},
    "outputs": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 63,
    "id": "e96a5910",
    "metadata": {},
    "outputs": [
@@ -269,12 +269,12 @@
    "source": [
     "Sometimes universities have different names in different rankings. For example, one ranking might use universities' full names while another might prefer acronyms. This might cause duplicates down the line.\n",
     "\n",
-    "To avoid this issue, let's save all university names sorted alphabetically and try to spot duplicates. They typically appear next to each other, since they differ only slightly. Once we spot a duplicate, we pick the preferred name, update our TSV rankings, and repeat this process until no duplicates are left."
+    "To avoid this issue, let's save all university names sorted alphabetically and try to spot duplicates. They typically appear next to each other, since they differ only slightly. Once we spot a duplicate, we pick the preferred name and add it to `normalize.py` as well as its alt-names, and we repeat this process until no duplicates are left."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 64,
    "id": "61f256b7",
    "metadata": {},
    "outputs": [],
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "151dd7e9",
    "metadata": {},
    "outputs": [],
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "94156d63",
    "metadata": {},
    "outputs": [],
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "id": "0de48819",
    "metadata": {},
    "outputs": [],
@@ -350,15 +350,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "5e55de6e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\tMassachusetts Institute of Technology (MIT)\t1.67\n",
+      "2\tStanford University\t2.00\n",
+      "3\tCarnegie Mellon University\t4.33\n",
+      "4\tUniversity of California, Berkeley\t5.33\n",
+      "5\tUniversity of Oxford\t5.33\n",
+      "6\tETH Zurich\t6.33\n",
+      "7\tHarvard University\t7.00\n",
+      "8\tNational University of Singapore (NUS)\t9.00\n",
+      "9\tTsinghua University\t10.33\n",
+      "10\tNanyang Technological University (NTU)\t11.67\n",
+      "11\tPrinceton University\t12.67\n",
+      "12\tUniversity of California, Los Angeles (UCLA)\t12.67\n",
+      "13\tUniversity of Toronto\t16.00\n",
+      "14\tCornell University\t18.00\n",
+      "15\tPeking University\t19.67\n",
+      "16\tUniversity of Cambridge\t20.67\n",
+      "17\tImperial College London\t22.00\n",
+      "18\tUniversity of Washington\t22.33\n",
+      "19\tShanghai Jiao Tong University\t25.00\n",
+      "20\tUniversity College London (UCL)\t26.00\n",
+      "21\tUniversity of Edinburgh\t26.00\n",
+      "22\tColumbia University\t28.00\n",
+      "23\tNew York University (NYU)\t28.33\n",
+      "24\tGeorgia Institute of Technology (Georgia Tech)\t29.67\n",
+      "25\tSwiss Federal Institute of Technology Lausanne (EPFL)\t30.33\n",
+      "26\tUniversity of Texas at Austin\t30.67\n",
+      "27\tChinese University of Hong Kong (CUHK)\t31.33\n",
+      "28\tUniversity of Michigan-Ann Arbor\t35.00\n",
+      "29\tHong Kong University of Science and Technology\t35.33\n",
+      "30\tZhejiang University\t35.33\n",
+      "31\tTechnical University of Munich\t37.33\n",
+      "32\tUniversity of Southern California\t37.33\n",
+      "33\tUniversity of Illinois at Urbana-Champaign\t38.67\n",
+      "34\tUniversity of Waterloo\t44.33\n",
+      "35\tCalifornia Institute of Technology (Caltech)\t45.33\n",
+      "36\tUniversity of British Columbia\t45.67\n",
+      "37\tUniversity of Montreal\t48.00\n",
+      "38\tUniversity of California, San Diego (UCSD)\t49.67\n",
+      "39\tUniversity of Pennsylvania\t50.67\n",
+      "40\tUniversity of Technology Sydney\t52.00\n",
+      "41\tKorea Advanced Institute of Science and Technology (KAIST)\t52.33\n",
+      "42\tUniversity of Science and Technology of China\t53.00\n",
+      "43\tUniversity of Sydney\t54.00\n",
+      "44\tYale University\t54.33\n",
+      "45\tUniversity of Maryland, College Park\t54.33\n",
+      "46\tUniversity of Tokyo\t55.33\n",
+      "47\tParis Sciences et Lettres (PSL University)\t55.67\n",
+      "48\tAustralian National University\t56.67\n",
+      "49\tUniversity of Hong Kong\t57.33\n",
+      "50\tUniversity of Wisconsin–Madison\t58.00\n",
+      "51\tUniversity of North Carolina at Chapel Hill\t59.00\n",
+      "52\tUniversity of Melbourne\t59.33\n",
+      "53\tJohns Hopkins University\t59.33\n",
+      "54\tSeoul National University\t61.00\n",
+      "55\tUniversity of Chicago\t61.33\n",
+      "56\tUniversity of New South Wales (UNSW Sydney)\t62.33\n",
+      "57\tCity University of Hong Kong\t64.33\n",
+      "58\tMcGill University\t68.00\n",
+      "59\tHong Kong Polytechnic University\t69.00\n",
+      "60\tKU Leuven\t69.67\n"
+     ]
+    }
+   ],
    "source": [
     "def save_ranking(ranking: list[Uni], limit: int = None) -> None:\n",
     "    \"\"\"Save ranking to file and preview it.\"\"\"\n",
     "    ranking_sorted = [uni for uni in sorted(ranking_all, key=lambda uni: uni.rank)]\n",
-    "    with open(\"data/cs-2021/ranking_global_cs_2021.tsv\", \"w\") as file:\n",
+    "    with open(\"data/cs-2022/ranking_global_cs_2022.tsv\", \"w\") as file:\n",
     "        for i, uni in enumerate(ranking_sorted, start=1):\n",
     "            row = f\"{i}\\t{uni.name}\\t{uni.rank:.2f}\"\n",
     "            file.write(f\"{row}\\n\")\n",
