Generate IDs for 2022 article update

--- a/top_universities.ipynb
+++ b/top_universities.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "id": "65141b66",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
     "from itertools import islice\n",
     "from statistics import mean\n",
     "\n",
-    "from normalize import alt2main"
+    "from normalize import alt2main, main2id"
    ]
   },
   {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "id": "fa98a0ea",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "id": "9c1aafd4",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "id": "5a841061",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "id": "c12c8d35",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 6,
    "id": "1ed902e3",
    "metadata": {},
    "outputs": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "id": "e96a5910",
    "metadata": {},
    "outputs": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 8,
    "id": "61f256b7",
    "metadata": {},
    "outputs": [],
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 9,
    "id": "151dd7e9",
    "metadata": {},
    "outputs": [],
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 10,
    "id": "94156d63",
    "metadata": {},
    "outputs": [],
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 11,
    "id": "0de48819",
    "metadata": {},
    "outputs": [],
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 12,
    "id": "5e55de6e",
    "metadata": {},
    "outputs": [
@@ -434,6 +434,47 @@
     "                break\n",
     "\n",
     "save_ranking(ranking_all, 60)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "45573aca",
+   "metadata": {},
+   "source": [
+    "## Get IDs (Helper)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "087066ad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unis without id: ['University of Southern California']\n",
+      "$top50cs =  [39, 1, 40, 3, 1092, 288, 38, 72, 168, 170, 6, 692, 8, 225, 159, 978, 1043, 15, 238, 384, 14, 33, 483, 12, 16, 86, 48, 2, 31, 2027, 74, 17, 2444, 11, 4, 1458, 49, 5, 813, 399, 930, 977, 99, 22, 69, 888, 292, 405, 56, 70]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_ids(ranking: list[Uni], limit: int = None) -> list[int]:\n",
+    "    ranking_sorted = [uni for uni in sorted(ranking_all, key=lambda uni: uni.rank)]\n",
+    "    ranking_sorted_ids = []\n",
+    "    unis_without_id = []\n",
+    "    for uni in ranking_sorted[:limit]:\n",
+    "        if uni.name in main2id:\n",
+    "            ranking_sorted_ids.append(main2id[uni.name])\n",
+    "        else:\n",
+    "            unis_without_id.append(uni.name)\n",
+    "    # print(\"Ranked unis ids:\", ranking_sorted_ids)\n",
+    "    print(\"Unis without id:\", unis_without_id)\n",
+    "    return ranking_sorted_ids\n",
+    "\n",
+    "top_50_cs = get_ids(ranking_all, 60)[:50]\n",
+    "print(\"$top50cs = \", top_50_cs)"
    ]
   }
  ],
